--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>WordFlow</title>
   
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#3b82f6">
+  <meta name="theme-color" content="#1e293b">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="WordFlow">
@@ -16,13 +16,13 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
   
   <style>
     body {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Plus Jakarta Sans', sans-serif;
       overflow: hidden;
-      background: #0f172a;
+      background: radial-gradient(circle at center, #1e293b 0%, #0f172a 100%);
       height: 100vh;
       width: 100vw;
       margin: 0;
@@ -42,32 +42,39 @@
       animation: popIn 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
     }
 
-    /* Debug Console Styling */
+    @keyframes successPulse {
+      0% { transform: scale(1); filter: brightness(1); }
+      50% { transform: scale(1.1); filter: brightness(1.5); }
+      100% { transform: scale(1); filter: brightness(1); }
+    }
+    .animate-success {
+      animation: successPulse 0.4s ease-out;
+    }
+
+    /* Glassmorphism utility */
+    .glass {
+      background: rgba(255, 255, 255, 0.03);
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
     #debug-console {
       position: fixed;
       bottom: 0;
       left: 0;
       right: 0;
-      height: 120px;
-      background: rgba(0, 0, 0, 0.85);
-      color: #00ff00;
+      height: 40px;
+      background: rgba(0, 0, 0, 0.8);
+      color: #666;
       font-family: monospace;
-      font-size: 10px;
+      font-size: 8px;
       padding: 5px;
-      overflow-y: auto;
+      overflow: hidden;
       z-index: 9999;
-      border-top: 1px solid #333;
-      pointer-events: none; /* Let clicks pass through unless we expand it */
-      opacity: 0.6;
+      pointer-events: none;
+      opacity: 0.5;
     }
-    #debug-console.expanded {
-      height: 50vh;
-      pointer-events: auto;
-      opacity: 1;
-    }
-    .log-entry { margin-bottom: 2px; border-bottom: 1px solid #222; }
-    .log-error { color: #ff5555; }
-    .log-info { color: #55aaff; }
   </style>
 
   <script type="importmap">
@@ -82,56 +89,10 @@
 }
 </script>
 </head>
-<body class="bg-slate-900 text-slate-100">
+<body class="text-slate-100">
   <div id="root"></div>
-  <div id="debug-console">
-    <div style="font-weight: bold; margin-bottom: 4px; border-bottom: 1px solid #444;">DEBUG CONSOLE (Tap to expand)</div>
-  </div>
+  <div id="debug-console">Console logs active...</div>
   
-  <script>
-    // Visible Debug Logger
-    const debugConsole = document.getElementById('debug-console');
-    debugConsole.addEventListener('click', () => debugConsole.classList.toggle('expanded'));
-
-    function logToScreen(msg, type = 'log') {
-      const div = document.createElement('div');
-      div.className = `log-entry log-${type}`;
-      const time = new Date().toLocaleTimeString().split(' ')[0];
-      div.textContent = `[${time}] ${msg}`;
-      debugConsole.appendChild(div);
-      debugConsole.scrollTop = debugConsole.scrollHeight;
-    }
-
-    // Capture browser logs
-    const originalLog = console.log;
-    const originalError = console.error;
-    const originalInfo = console.info;
-
-    console.log = (...args) => {
-      logToScreen(args.map(a => typeof a === 'object' ? JSON.stringify(a) : a).join(' '), 'log');
-      originalLog.apply(console, args);
-    };
-    console.error = (...args) => {
-      logToScreen(args.map(a => typeof a === 'object' ? JSON.stringify(a) : a).join(' '), 'error');
-      originalError.apply(console, args);
-    };
-    console.info = (...args) => {
-      logToScreen(args.map(a => typeof a === 'object' ? JSON.stringify(a) : a).join(' '), 'info');
-      originalInfo.apply(console, args);
-    };
-
-    window.onerror = function(msg, url, lineNo, columnNo, error) {
-      console.error(`GLOBAL ERROR: ${msg} at ${lineNo}:${columnNo}`);
-      return false;
-    };
-
-    window.onunhandledrejection = function(event) {
-      console.error(`PROMISE REJECTION: ${event.reason}`);
-    };
-
-    console.info("HTML: System ready, waiting for index.tsx...");
-  </script>
-
   <script type="module" src="./index.tsx"></script>
 </body>
 </html>
