--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <title>WordFlow</title>
   
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1e293b">
-  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#0f172a">
+  
+  <!-- iOS meta tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="WordFlow">
   <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3771/3771261.png">
@@ -19,6 +21,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
   
   <style>
+    :root {
+      --sat: env(safe-area-inset-top);
+      --sab: env(safe-area-inset-bottom);
+    }
     body {
       font-family: 'Plus Jakarta Sans', sans-serif;
       overflow: hidden;
@@ -26,13 +32,15 @@
       height: 100vh;
       width: 100vw;
       margin: 0;
+      /* Prevent elastic scrolling on iOS */
+      position: fixed;
     }
     .no-select {
       user-select: none;
       -webkit-user-select: none;
     }
-    .safe-top { padding-top: env(safe-area-inset-top); }
-    .safe-bottom { padding-bottom: env(safe-area-inset-bottom); }
+    .safe-top { padding-top: var(--sat, 20px); }
+    .safe-bottom { padding-bottom: var(--sab, 20px); }
 
     @keyframes popIn {
       0% { transform: scale(0.8); opacity: 0; }
@@ -51,11 +59,10 @@
       animation: successPulse 0.4s ease-out;
     }
 
-    /* Glassmorphism utility */
     .glass {
       background: rgba(255, 255, 255, 0.03);
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
       border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
@@ -84,7 +91,9 @@
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.0"
   }
 }
 </script>
