--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       height: 100vh;
       width: 100vw;
       margin: 0;
-      /* Prevent elastic scrolling on iOS */
       position: fixed;
     }
     .no-select {
@@ -65,43 +64,21 @@
       -webkit-backdrop-filter: blur(12px);
       border: 1px solid rgba(255, 255, 255, 0.1);
     }
-
-    #debug-console {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 40px;
-      background: rgba(0, 0, 0, 0.8);
-      color: #666;
-      font-family: monospace;
-      font-size: 8px;
-      padding: 5px;
-      overflow: hidden;
-      z-index: 9999;
-      pointer-events: none;
-      opacity: 0.5;
-    }
   </style>
-
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.0"
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
 <body class="text-slate-100">
   <div id="root"></div>
-  <div id="debug-console">Console logs active...</div>
-  
-  <script type="module" src="./index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
