--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>WordFlow</title>
   
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#0f172a">
+  <meta name="theme-color" content="#042f2e">
   
   <!-- iOS meta tags -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -28,7 +28,7 @@
     body {
       font-family: 'Plus Jakarta Sans', sans-serif;
       overflow: hidden;
-      background: radial-gradient(circle at center, #1e293b 0%, #0f172a 100%);
+      background: radial-gradient(circle at center, #134e4a 0%, #042f2e 100%);
       height: 100vh;
       width: 100vw;
       margin: 0;
