--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     body {
       font-family: 'Plus Jakarta Sans', sans-serif;
       overflow: hidden;
-      background: radial-gradient(circle at center, #134e4a 0%, #042f2e 100%);
+      background: radial-gradient(circle at center, #0f766e 0%, #042f2e 100%);
       height: 100vh;
       width: 100vw;
       margin: 0;
@@ -59,10 +59,10 @@
     }
 
     .glass {
-      background: rgba(255, 255, 255, 0.03);
+      background: rgba(45, 212, 191, 0.05);
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(45, 212, 191, 0.15);
     }
   </style>
 <script type="importmap">
@@ -77,7 +77,7 @@
 }
 </script>
 </head>
-<body class="text-slate-100">
+<body class="text-teal-50">
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
